--- a/_data/db/code/releases/asc-csa/apogy.yml
+++ b/_data/db/code/releases/asc-csa/apogy.yml
@@ -17,7 +17,7 @@ languages:
 name:
   en: Apogy
   fr: Apogy
-licenses:
+licences:
   - URL:
       en: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
       fr: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
