--- a/_data/db/code/releases/bc/ckanext-bcgov.yml
+++ b/_data/db/code/releases/bc/ckanext-bcgov.yml
@@ -20,7 +20,7 @@ languages:
 name:
   en: ckanext-bcgov
   fr: ckanext-bcgov
-licenses:
+licences:
   - URL:
       en: 'https://github.com/bcgov/ckanext-bcgov/blob/dev/license'
       fr: 'https://github.com/bcgov/ckanext-bcgov/blob/dev/license'
