--- a/_data/db/code/releases/bc/devex.yml
+++ b/_data/db/code/releases/bc/devex.yml
@@ -17,7 +17,7 @@ languages:
 name:
   en: Devex
   fr: Devex
-licenses:
+licences:
   - URL:
       en: 'https://github.com/BCDevExchange/devex/blob/develop/LICENSE'
       fr: 'https://github.com/BCDevExchange/devex/blob/develop/LICENSE'
