--- a/_data/db/code/releases/edmonton_ab/youcanbenefit.yml
+++ b/_data/db/code/releases/edmonton_ab/youcanbenefit.yml
@@ -18,7 +18,7 @@ description:
 name:
   en: YouCanBenefit
   fr: YouCanBenefit
-licenses:
+licences:
   - URL:
       en: 'https://github.com/yeg-relief/youcanbenefit/blob/master/LICENSE'
       fr: 'https://github.com/yeg-relief/youcanbenefit/blob/master/LICENSE'
