--- a/_data/db/code/releases/esdc-edsc/net-code-coverage-demo.yml
+++ b/_data/db/code/releases/esdc-edsc/net-code-coverage-demo.yml
@@ -12,7 +12,7 @@ description:
 name:
   en: .Net Code Coverage Demo
   fr: Démo de couverture de code .Net
-licenses:
+licences:
   - URL:
       en: 'https://github.com/esdc-devx/DotNetCCDemo/blob/master/LICENSE'
       fr: 'https://github.com/esdc-devx/DotNetCCDemo/blob/master/LICENSE'
