--- a/_data/db/code/releases/nrc-cnrc/egsnrc.yml
+++ b/_data/db/code/releases/nrc-cnrc/egsnrc.yml
@@ -14,7 +14,7 @@ languages:
 name:
   en: EGSnrc
   fr: EGSnrc
-licenses:
+licences:
   - URL:
       en: 'https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE'
       fr: 'https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE'
