--- a/_data/db/code/releases/ssc-spc/metpx-sarracenia.yml
+++ b/_data/db/code/releases/ssc-spc/metpx-sarracenia.yml
@@ -15,7 +15,7 @@ languages:
 name:
   en: MetPX-Sarracenia
   fr: MetPX-Sarracenia
-licenses:
+licences:
   - URL:
       en: 'https://github.com/MetPX/sarracenia/blob/master/LICENSE'
       fr: 'https://github.com/MetPX/sarracenia/blob/master/LICENSE'
