--- a/_data/db/code/releases/tbs-sct/open-resource-exchange.yml
+++ b/_data/db/code/releases/tbs-sct/open-resource-exchange.yml
@@ -12,7 +12,7 @@ description:
 name:
   en: Open Resource Exchange
   fr: Échange de Ressource Ouvert
-licenses:
+licences:
   - URL:
       en: 'https://github.com/canada-ca/ore-ero/blob/master/LICENSE.txt'
       fr: 'https://github.com/canada-ca/ore-ero/blob/master/LICENSE.txt'
