--- a/_data/forms/config-oss.yml
+++ b/_data/forms/config-oss.yml
@@ -7,7 +7,7 @@ formGroups:
   - preset: selectOss
   - preset: description
   - preset: homepageURL
-  - preset: licenses
+  - preset: licences
   - preset: tags
   - preset: empty
     start: true
