--- a/_data/db/code/releases/ab/ckanext-ab-scheming.yml
+++ b/_data/db/code/releases/ab/ckanext-ab-scheming.yml
@@ -17,7 +17,7 @@ languages:
 name:
   en: ckanext-ab_scheming
   fr: ckanext-ab_scheming
-licenses:
+licences:
   - URL:
       en: 'https://github.com/abgov/ckanext-ab_scheming/blob/master/LICENSE'
       fr: 'https://github.com/abgov/ckanext-ab_scheming/blob/master/LICENSE'
