--- a/_data/db/code/releases/bc/gwells.yml
+++ b/_data/db/code/releases/bc/gwells.yml
@@ -20,7 +20,7 @@ languages:
 name:
   en: gwells
   fr: gwells
-licenses:
+licences:
   - URL:
       en: 'https://github.com/bcgov/gwells/blob/release/LICENSE'
       fr: 'https://github.com/bcgov/gwells/blob/release/LICENSE'
