--- a/_data/db/code/releases/esdc-edsc/apphub.yml
+++ b/_data/db/code/releases/esdc-edsc/apphub.yml
@@ -12,7 +12,7 @@ description:
 name:
   en: AppHub
   fr: HubApp
-licenses:
+licences:
   - URL:
       en: 'https://github.com/esdc-devx/AppHub/blob/master/LICENSE'
       fr: 'https://github.com/esdc-devx/AppHub/blob/master/LICENSE'
