--- a/_data/db/code/releases/tbs-sct/ckanext-fluent.yml
+++ b/_data/db/code/releases/tbs-sct/ckanext-fluent.yml
@@ -17,7 +17,7 @@ name:
 organization:
   en: Open Government
   fr: Gouvernement Ouvert
-licenses:
+licences:
   - URL:
       en: 'https://github.com/ckan/ckanext-fluent/blob/master/COPYING'
       fr: 'https://github.com/ckan/ckanext-fluent/blob/master/COPYING.fr'
