--- a/_data/db/code/releases/tc/alexa-gc-recalls.yml
+++ b/_data/db/code/releases/tc/alexa-gc-recalls.yml
@@ -14,7 +14,7 @@ languages:
 name:
   en: alexa-gc-recalls
   fr: alexa-gc-recalls
-licenses:
+licences:
   - URL:
       en: 'https://github.com/tc-ca/alexa-gc-recalls/blob/master/LICENSE'
       fr: 'https://github.com/tc-ca/alexa-gc-recalls/blob/master/LICENSE'
