--- a/_data/schemas/administrations.yml
+++ b/_data/schemas/administrations.yml
@@ -3,5 +3,5 @@ code: str()
 name:
   en: str()
   fr: str()
-parent: enum('federal', 'provincial', 'municipal')
+parent: enum('federal', 'provincial', 'municipal', 'aboriginal')
 provinceCode: enum('ab', 'bc', 'mb', 'nb', 'nl', 'nt', 'ns', 'nu', 'on', 'pe', 'qc', 'sk', 'yt', required=False)
