--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,13 @@ script:
 - bundle exec jekyll build
 - htmlproofer --disable-external --allow-hash-href ./_site
 - html5validator --root _site/
-- yamale -s schemas/administrations.yml _data/administrations
-- yamale -s schemas/code_administration.yml _data/code/administrations
-- yamale -s schemas/code_code.yml _data/code/releases/
-- yamale -s schemas/software_administration.yml _data/software/**/administrations
-- yamale -s schemas/software_software.yml _data/software/**/*.yml
-- yamale -s schema/standards_administration.yml _data/standards/**/administrations
-- yamale -s schema/standards_standards.yml _data/standards/**/*.yml
+- yamale -s schemas/administrations.yml _data/db/administrations
+- yamale -s schemas/code_administration.yml _data/db/code/administrations
+- yamale -s schemas/code_code.yml _data/db/code/releases/
+- yamale -s schemas/software_administration.yml _data/db/software/uses
+- yamale -s schemas/software_software.yml _data/db/software/softwares
+- yamale -s schema/standards_administration.yml _data/db/standard/administrations
+- yamale -s schema/standards_standards.yml _data/db/standard/standards
 - npm run lint
 - yamllint -d configYamlLint.yml _data
 
