--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
 - yamale -s schemas/administrations.yml _data/db/administrations
 - yamale -s schemas/code_administration.yml _data/db/code/administrations
 - yamale -s schemas/code_code.yml _data/db/code/releases/
-- yamale -s schemas/software_administration.yml _data/db/software/uses
+- yamale -s schemas/software_uses.yml _data/db/software/uses
 - yamale -s schemas/software_software.yml _data/db/software/softwares
 - yamale -s schema/standards_administration.yml _data/db/standard/administrations
 - yamale -s schema/standards_standards.yml _data/db/standard/standards
