Removed schema & updated config+includes/form for simplicity

--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -3,47 +3,40 @@
 id: code
 
 formGroups:
-  - preset: schemaVersion
   - preset: adminCode
   - preset: selectCode
-  - preset: empty
-    start: true
-    title: releases
+    param: { id: true }
   - preset: description
   - preset: contact
   - preset: dates
-    created: true
-    modified: true
-    updated: true
+    param: { created: true, modified: true, updated: true }
   - widget: string-i18n
     title: downloadUrl
-    type: url
-    required: false
+    param: { type: url, required: false }
   - preset: homepageURL
   - preset: languages
   - widget: string-i18n
     title: organization
-    rule: alphanum-space
-    required: false
+    param: { rule: alphanum-space, required: false}
   - widget: group
     title: partners
-    required: false
-    more: true
+    param: { required: false, more: true }
     fields:
       - widget: string-i18n
         title: URL
-        type: url
+        param: { type: url }
       - widget: string
         title: email
-        type: email
+        param: { type: email }
       - widget: string-i18n
         title: name
-        rule: alphanum-space
+        param: { rule: alphanum-space }
   - preset: licences
+    param: { more: true }
   - widget: string-i18n
     title: repositoryUrl
-    type: url
+    param: { type: url }
   - preset: relatedCode
+    param: { more: true }
   - preset: tags
   - preset: status
-  - preset: empty
