--- a/_data/forms/config-standards.yml
+++ b/_data/forms/config-standards.yml
@@ -3,39 +3,32 @@
 id: standards
 
 formGroups:
-  - preset: schemaVersion
   - preset: selectStandard
   - widget: string-i18n
     title: name
-    rule: alphanum-space
+    param: { rule: alphanum-space }
   - preset: description
   - preset: dates
-    created: true
-    metadata: true
+    param: { created: true }
   - widget: string-i18n
     title: specURL
-    type: url
+    param: { type: url }
   - widget: string
     title: standardOrg
   - preset: tags
   - preset: hr
-  - preset: empty
-    start: true
-    title: administrations
   - preset: adminCode
   - widget: group
     title: reference
-    more: true
+    param: { more: true }
     fields:
       - widget: string-i18n
         title: URL
-        type: url
+        param: { type: url }
       - widget: string-i18n
         title: name
-        rule: names
+        param: { rule: names }
   - widget: string
     title: status
   - preset: contact
-    phone: false
-    required: true
-  - preset: empty
+    param: { phone: false }
