--- a/_data/db/administrations/hc-sc.yml
+++ b/_data/db/administrations/hc-sc.yml
@@ -1,6 +1,6 @@
 ---
-code: gac-amc
+code: hc-sc
 name:
-  en: Global Affairs Canada
-  fr: Affaires mondiales Canada
+  en: Health Canada
+  fr: Santé Canada
 parent: federal
