--- a/_data/normes_ouvertes-open_standards/html5.yml
+++ b/_data/normes_ouvertes-open_standards/html5.yml
@@ -4,6 +4,9 @@ administrations:
   - adminCode: tbs-sct
     contact:
       email: null
+    date:
+      created: '2018-01-23'
+      metadataLastUpdated: '2018-11-15'
     references:
       - URL:
           en: 'https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=25875'
@@ -12,9 +15,6 @@ administrations:
           en: Standard on Web Interoperability
           fr: Norme sur l'interopérabilité du Web
     status: mandatory-gc
-date:
-  created: '2018-01-23'
-  metadataLastUpdated: '2018-11-15'
 description:
   en: HTML5 is a markup language used for structuring and presenting content on the Web. It is the fifth and current major version of the HTML standard.
   fr: HTML5 est un langage de balisage utilisé pour structurer et présenter du contenu sur le Web. C'est la cinquième et dernière version majeure de la norme HTML.
@@ -24,8 +24,10 @@ name:
 specURL:
   en: 'https://www.w3.org/TR/html5/'
   fr: 'https://www.w3.org/TR/html5/'
-standardCode: HTML5
-standardsOrg: W3C
+standardAcronym: HTML5
+standardsOrg:
+  en: W3C
+  fr: W3C
 tags:
   en:
     - Web
