--- a/_data/forms/rules.yml
+++ b/_data/forms/rules.yml
@@ -3,3 +3,4 @@ names: data-rule-names-en-fr
 phone: data-rule-custom-phone
 dateISO: data-rule-dateISO
 alphanum-space: data-rule-alphanum-space-en-fr
+unique-newadmincode: data-rule-unique-newadmincode
