Renamed standards --> standards && license --> licence

--- a/_data/db/standard/standards/html5.yml
+++ b/_data/db/standard/standards/html5.yml
@@ -15,7 +15,7 @@ specURL:
   en: 'https://www.w3.org/TR/html5/'
   fr: 'https://www.w3.org/TR/html5/'
 standardAcronym: HTML5
-standardsOrg:
+standardOrg:
   en: W3C
   fr: W3C
 tags:
