--- a/_data/forms/config-software.yml
+++ b/_data/forms/config-software.yml
@@ -6,7 +6,7 @@ formGroups:
   - preset: selectSoftware
   - preset: description
   - preset: homepageURL
-  - preset: licences
+  - preset: licence
     param: {more: true}
   - preset: tags
   - preset: adminCode
