Updated standards w/ missing changes from latests updates to master

--- a/_data/db/standard/administrations/html5/tbs-sct.yml
+++ b/_data/db/standard/administrations/html5/tbs-sct.yml
@@ -1,5 +1,10 @@
 ---
 administration: tbs-sct
+contact:
+  email: temporary@email.com
+date:
+  created: '2018-01-23'
+  metadataLastUpdated: '2018-11-15'
 references:
   - URL:
       en: 'https://www.tbs-sct.gc.ca/pol/doc-eng.aspx?id=25875'
