--- a/_data/db/standard/administrations/utf-8/lac-bac.yml
+++ b/_data/db/standard/administrations/utf-8/lac-bac.yml
@@ -1,5 +1,10 @@
 ---
 administration: lac-bac
+contact:
+  email: temporary@email.com
+date:
+  created: '2018-01-23'
+  metadataLastUpdated: '2018-11-15'
 references:
   - URL:
       en: 'http://www.lac-bac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx'
