--- a/_data/schemas/standard_administration.yml
+++ b/_data/schemas/standard_administration.yml
@@ -4,8 +4,11 @@ contact:
   URL:
     en: str(required=False)
     fr: str(required=False)
-  email: str(required=False)
+  email: str()
   name: str(required=False)
+date:
+  created: str()
+  metadataLastUpdated: str()
 references:
   - URL:
       en: str()
