Standardization of data files (80 char max length) & JS (dot notation)

--- a/_data/db/code/releases/eccc/metro.yml
+++ b/_data/db/code/releases/eccc/metro.yml
@@ -7,8 +7,12 @@ date:
   created: '2006-08-28'
   metadataLastUpdated: '2019-01-31'
 description:
-  en: The Model of the Environment and Temperature of Roads (METRo) is a road forecast software.
-  fr: Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route.
+  en: >-
+    The Model of the Environment and Temperature of Roads (METRo) is a road
+    forecast software.
+  fr: >-
+    Le Modèle de l'Environnement et de la Température de la Route (METRo) est un
+    logiciel de prévision de la température de la route.
 languages:
   - Python
 name:
