--- a/_data/db/code/releases/edmonton_ab/youcanbenefit.yml
+++ b/_data/db/code/releases/edmonton_ab/youcanbenefit.yml
@@ -13,8 +13,13 @@ date:
   metadataLastUpdated: '2019-05-28'
   lastModified: '2019-05-28'
 description:
-  en: YouCanBenefit is a web application that increases social benefit program discoverability for people of lesser means and their allies.
-  fr: YouCanBenefit est une application Web qui augmente la découvrabilité des programmes d''avantages sociaux pour les personnes moins fortunées et leurs alliés.
+  en: >-
+    YouCanBenefit is a web application that increases social benefit program
+    discoverability for people of lesser means and their allies.
+  fr: >-
+    YouCanBenefit est une application Web qui augmente la découvrabilité des
+    programmes d''avantages sociaux pour les personnes moins fortunées et leurs
+    alliés.
 name:
   en: YouCanBenefit
   fr: YouCanBenefit
