--- a/_data/db/software/softwares/airbnb-knowledge-repo.yml
+++ b/_data/db/software/softwares/airbnb-knowledge-repo.yml
@@ -2,7 +2,9 @@
 schemaVersion: '1.0'
 description:
   en: A platform for data scientists and other technical professions.
-  fr: Une plateforme pour les scientifiques de données et d'autres professions techniques.
+  fr: >-
+    Une plateforme pour les scientifiques de données et d'autres professions
+    techniques.
 homepageURL:
   en: 'https://airbnb.io/projects/knowledge-repo/'
   fr: 'https://airbnb.io/projects/knowledge-repo/'
