--- a/_data/db/software/uses/docker/tbs-sct.yml
+++ b/_data/db/software/uses/docker/tbs-sct.yml
@@ -11,4 +11,6 @@ uses:
       fr: Développements et Déploiements
     description:
       en: Digital Collaboration Division development and deployment
-      fr: Développement et déploiement de la Division de la collaboration numérique
+      fr: >-
+        Développement et déploiement de la Division de la collaboration
+        numérique
