--- a/_data/db/code/releases/asc-csa/apogy.yml
+++ b/_data/db/code/releases/asc-csa/apogy.yml
@@ -10,7 +10,7 @@ date:
   created: '2015-09-28'
   metadataLastUpdated: '2019-01-31'
 description:
-  en: The one-stop-shop solution for operating robots, satellites and beyond
+  en: 'The one-stop-shop solution for operating robots, satellites and beyond'
   fr: Un logiciel polyvalent pour faire fonctionner des robots et des satellites
 languages:
   - Java
