--- a/_data/db/code/releases/bc/gwells.yml
+++ b/_data/db/code/releases/bc/gwells.yml
@@ -11,7 +11,9 @@ date:
   metadataLastUpdated: '2019-05-10'
 description:
   en: Groundwater Wells and Aquifers application for the Ministry of Environment.
-  fr: Application de puits d'eau souterraine et d'aquifères pour le ministère de l'environnement.
+  fr: ­>-
+    Application de puits d'eau souterraine et d'aquifères pour le ministère de
+    l'environnement.
 homepageURL:
   en: 'https://apps.nrs.gov.bc.ca/gwells/'
   fr: 'https://apps.nrs.gov.bc.ca/gwells/'
