--- a/_data/db/code/releases/esdc-edsc/apphub.yml
+++ b/_data/db/code/releases/esdc-edsc/apphub.yml
@@ -8,7 +8,9 @@ date:
   metadataLastUpdated: '2019-02-21'
 description:
   en: A dashboard to show expose metrics on software projects at ESDC
-  fr: Un tableau de bord pour afficher les métriques d'exposition sur les projets logiciels d'EDSC
+  fr: >-
+    Un tableau de bord pour afficher les métriques d'exposition sur les projets
+    logiciels d'EDSC
 name:
   en: AppHub
   fr: HubApp
