--- a/_data/db/code/releases/nrc-cnrc/egsnrc.yml
+++ b/_data/db/code/releases/nrc-cnrc/egsnrc.yml
@@ -7,8 +7,12 @@ date:
   created: '2012-11-25'
   metadataLastUpdated: '2019-01-31'
 description:
-  en: Toolkit to perform Monte Carlo simulation of ionizing radiation transport through matter
-  fr: Boîte à outils pour effectuer une simulation de Monte Carlo du transport du rayonnement ionisant à travers la matière
+  en: >-
+    Toolkit to perform Monte Carlo simulation of ionizing radiation transport
+    through matter
+  fr: >-
+    Boîte à outils pour effectuer une simulation de Monte Carlo du transport du
+    rayonnement ionisant à travers la matière
 languages:
   - C++
 name:
