--- a/_data/db/code/releases/ssc-spc/metpx-sarracenia.yml
+++ b/_data/db/code/releases/ssc-spc/metpx-sarracenia.yml
@@ -7,8 +7,12 @@ date:
   created: '2013-10-06'
   metadataLastUpdated: '2019-01-31'
 description:
-  en: Subscribe And Recursively Re-advertise Ad nauseam to Communicate Everything Nearly Instantly and Always
-  fr: Souscrire, Annoncer, et Recursivement Re-annoncer Afin de Communiquer Instantanément et Ad vitam aeternam
+  en: >-
+    Subscribe And Recursively Re-advertise Ad nauseam to Communicate Everything
+    Nearly Instantly and Always
+  fr: >-
+    Souscrire, Annoncer, et Recursivement Re-annoncer Afin de Communiquer
+    Instantanément et Ad vitam aeternam
 languages:
   - Python
   - C
