--- a/_data/db/code/releases/tbs-sct/cds-website.yml
+++ b/_data/db/code/releases/tbs-sct/cds-website.yml
@@ -7,8 +7,12 @@ date:
   created: '2017-04-09'
   metadataLastUpdated: '2019-01-31'
 description:
-  en: Both digital.canada.ca and numerique.canada.ca are published from this repository.
-  fr: digital.canada.ca et numerique.canada.ca sont publiés à partir de ce repository.
+  en: >-
+    Both digital.canada.ca and numerique.canada.ca are published from this
+    repository.
+  fr: >-
+    digital.canada.ca et numerique.canada.ca sont publiés à partir de ce
+    repository.
 name:
   en: CDS Website
   fr: Site Web SNC
