--- a/_data/db/software/softwares/debezium.yml
+++ b/_data/db/software/softwares/debezium.yml
@@ -2,7 +2,9 @@
 schemaVersion: '1.0'
 description:
   en: Debezium is an open source distributed platform for change data capture.
-  fr: Debezium est une platforme distribuée d'une ressource ouverte pour la capture de données modifiées.
+  fr: >-
+    Debezium est une platforme distribuée d'une ressource ouverte pour la
+    capture de données modifiées.
 homepageURL:
   en: 'https://debezium.io/'
   fr: 'https://debezium.io/'
