--- a/_data/db/software/softwares/docker.yml
+++ b/_data/db/software/softwares/docker.yml
@@ -1,8 +1,12 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: Performs operating-system-level virtualization also known as containerization
-  fr: Effectue une virtualisation au niveau du système d'exploitation, également appelée conteneurisation
+  en: >-
+    Performs operating-system-level virtualization also known as
+    containerization
+  fr: >-
+    Effectue une virtualisation au niveau du système d'exploitation, également
+    appelée conteneurisation
 homepageURL:
   en: 'https://www.docker.com'
   fr: 'https://www.docker.com'
