--- a/_data/db/software/softwares/drupal.yml
+++ b/_data/db/software/softwares/drupal.yml
@@ -1,8 +1,12 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: Content management system (CMS) written in PHP. Drupal provides a back-end framework for web sites.
-  fr: Système de gestion de contenu (CMS) écrit en PHP. Drupal fournis une plateforme back-end pour des sites Web.
+  en: >-
+    Content management system (CMS) written in PHP. Drupal provides a back-end
+    framework for web sites.
+  fr: >-
+    Système de gestion de contenu (CMS) écrit en PHP. Drupal fournis une
+    plateforme back-end pour des sites Web.
 homepageURL:
   en: 'https://www.drupal.org'
   fr: 'https://www.drupal.org'
