--- a/_data/db/standard/administrations/utf-8/lac-bac.yml
+++ b/_data/db/standard/administrations/utf-8/lac-bac.yml
@@ -7,9 +7,15 @@ date:
   metadataLastUpdated: '2018-11-15'
 references:
   - URL:
-      en: 'http://www.lac-bac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx'
-      fr: 'http://www.lac-bac.gc.ca/fra/services/gestion-ressources-documentaires-gouvernement/lignes-directrices/Pages/lignes-directrices-formats-fichier-transferers-ressources-documentaires.aspx'
+      en: >-
+        http://www.lac-bac.gc.ca/eng/services/government-information-resources/guidelines/Pages/guidelines-file-formats-transferring-information-resources-enduring-value.aspx
+      fr: >-
+        http://www.lac-bac.gc.ca/fra/services/gestion-ressources-documentaires-gouvernement/lignes-directrices/Pages/lignes-directrices-formats-fichier-transferers-ressources-documentaires.aspx
     name:
-      en: Guidelines on File Formats for Transferring Information Resources of Enduring Value
-      fr: Lignes directrices sur les formats de fichier à utiliser pour transférer des ressources documentaires
+      en: >-
+        Guidelines on File Formats for Transferring Information Resources of
+        Enduring Value
+      fr: >-
+        Lignes directrices sur les formats de fichier à utiliser pour transférer
+        des ressources documentaires
 status: preferred-gc
