--- a/_data/db/standard/standards/utf-8.yml
+++ b/_data/db/standard/standards/utf-8.yml
@@ -4,8 +4,14 @@ administrations:
   - tbs-sct
   - lac-bac
 description:
-  en: UTF-8 is a variable width character encoding capable of encoding all valid code points in Unicode using one to four 8-bit bytes. The encoding is defined by the Unicode standard.
-  fr: UTF-8 est un codage de caractères de largeur variable capable de coder tous les points de code valides en Unicode en utilisant un à quatre octets de 8 bits. Le codage est défini par la norme Unicode.
+  en: >-
+    UTF-8 is a variable width character encoding capable of encoding all valid
+    code points in Unicode using one to four 8-bit bytes. The encoding is
+    defined by the Unicode standard.
+  fr: >-
+    UTF-8 est un codage de caractères de largeur variable capable de coder tous
+    les points de code valides en Unicode en utilisant un à quatre octets de 8
+    bits. Le codage est défini par la norme Unicode.
 name:
   en: Unicode Transformation Format 8
   fr: Unicode Transformation Format 8
